# Copyright (c) 2010, The OpenDKIM Project.  All rights reserved.
#
# $Id: Makefile.am,v 1.4 2010/10/25 17:13:17 cm-msk Exp $

#AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = README \
	convert_keylist.sh \
	opendkim.init \
	opendkim.spec \
	authheaders-check-setup-hook.lua \
	opendkim-reportstats \
	README.opendkim-reportstats
