# Copyright (c) 2010, 2011, The OpenDKIM Project.  All rights reserved.
#
# $Id: Makefile.am,v 1.12 2010/10/25 17:13:17 cm-msk Exp $

#AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = draft-ietf-dkim-implementation-report-06.txt \
	draft-ietf-dkim-mailinglists-06.txt \
	draft-ietf-marf-dkim-reporting-01.txt \
	draft-kucherawy-authres-vbr-04.txt \
	draft-kucherawy-reputation-media-type-00.txt \
	draft-kucherawy-reputation-model-00.txt \
	draft-kucherawy-reputation-query-http-01.txt \
	draft-kucherawy-reputation-vocab-identity-00.txt \
	rfc3447.txt \
	rfc4686.txt \
	rfc4871.txt \
	rfc5016.txt \
	rfc5322.txt \
	rfc5451.txt \
	rfc5518.txt \
	rfc5585.txt \
	rfc5617.txt \
	rfc5672.txt \
	rfc5863.txt \
	rfc5965.txt \
	rfc6008.txt \
	rfc6212.txt
