# Copyright (c) 2010-2012, The OpenDKIM Project.  All rights reserved.
#
# $Id: Makefile.am,v 1.12 2010/10/25 17:13:17 cm-msk Exp $

#AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = draft-gregorio-uritemplate-08.txt \
	draft-ietf-marf-as-11.txt \
	draft-ietf-marf-authfailure-report-10.txt \
	draft-ietf-marf-dkim-reporting-16.txt \
	draft-ietf-repute-email-identifiers-02.txt \
	draft-ietf-repute-media-type-01.txt \
	draft-ietf-repute-model-01.txt \
	draft-ietf-repute-query-http-01.txt \
	report-rfc4871.txt \
	rfc2254.txt \
	rfc3447.txt \
	rfc4686.txt \
	rfc5016.txt \
	rfc5322.txt \
	rfc5451.txt \
	rfc5518.txt \
	rfc5585.txt \
	rfc5617.txt \
	rfc5672.txt \
	rfc5863.txt \
	rfc5965.txt \
	rfc6008.txt \
	rfc6212.txt \
	rfc6376.txt \
	rfc6377.txt \
	rfc6522.txt \
	rfc6541.txt
